Bug 155871 - ReqIF export produces invalid XML (missing closing li element) for a list
Summary: ReqIF export produces invalid XML (missing closing li element) for a list
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-16 12:52 UTC by Mike Kaganski
Modified: 2023-06-20 07:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A simple two-level list (622 bytes, application/vnd.oasis.opendocument.text)
2023-06-16 12:52 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-16 12:52:29 UTC
Created attachment 187937 [details]
A simple two-level list

Export the attached document to ReqIF using current master with this command:

> soffice --convert-to "xhtml:HTML (StarWriter):xhtmlns=reqif-xhtml" missingLiTagClosed.fodt


The resulting .xhtml will miss one </reqif-xhtml:li> closing elements, so will be invalid XML/ReqIF.
Comment 1 Commit Notification 2023-06-16 17:13:11 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/df98b6015cd2ae4f1573e12cee1b1bc947adabf0

tdf#155871: don't forget to close li before starting next

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-20 07:11:53 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7bf3a3e35273ac9cb9257e396f58be2d8a7ddeab

tdf#155871: don't forget to close li before starting next

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.