tdf#155871: don't forget to close li before starting next

When closing a nested list, the previous condition failed to close
the last li in case when the next item is numbered (i.e., will need
another li). Indeed, if the next item is unnumbered, current last
li should stay open.

Change-Id: Iad7d83d50d2f02d6bd1d046804b7e23b59f9ce8b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153179
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>